@@ -110,6 +110,20 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1182,7 +1196,7 @@ operator|new
 name|String
 index|[]
 block|{
-literal|"/**"
+literal|"$FQN:/**"
 block|}
 expr_stmt|;
 specifier|final
@@ -1397,126 +1411,7 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|handleStreamingSingleDocs
-specifier|private
-name|void
-name|handleStreamingSingleDocs
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-while|while
-condition|(
-literal|true
-condition|)
-block|{
-name|int
-name|ev
-init|=
-name|parser
-operator|.
-name|nextEvent
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|ev
-operator|==
-name|JSONParser
-operator|.
-name|EOF
-condition|)
-return|return;
-if|if
-condition|(
-name|ev
-operator|==
-name|JSONParser
-operator|.
-name|OBJECT_START
-condition|)
-block|{
-name|assertEvent
-argument_list|(
-name|ev
-argument_list|,
-name|JSONParser
-operator|.
-name|OBJECT_START
-argument_list|)
-expr_stmt|;
-name|AddUpdateCommand
-name|cmd
-init|=
-operator|new
-name|AddUpdateCommand
-argument_list|(
-name|req
-argument_list|)
-decl_stmt|;
-name|cmd
-operator|.
-name|commitWithin
-operator|=
-name|commitWithin
-expr_stmt|;
-name|cmd
-operator|.
-name|overwrite
-operator|=
-name|overwrite
-expr_stmt|;
-name|cmd
-operator|.
-name|solrDoc
-operator|=
-name|parseDoc
-argument_list|(
-name|ev
-argument_list|)
-expr_stmt|;
-name|processor
-operator|.
-name|processAdd
-argument_list|(
-name|cmd
-argument_list|)
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|ev
-operator|==
-name|JSONParser
-operator|.
-name|ARRAY_START
-condition|)
-block|{
-name|handleAdds
-argument_list|()
-expr_stmt|;
-block|}
-else|else
-block|{
-throw|throw
-operator|new
-name|SolrException
-argument_list|(
-name|SolrException
-operator|.
-name|ErrorCode
-operator|.
-name|BAD_REQUEST
-argument_list|,
-literal|"Unexpected event :"
-operator|+
-name|ev
-argument_list|)
-throw|;
-block|}
-block|}
-block|}
+comment|/*private void handleStreamingSingleDocs() throws IOException     {       while( true ) {         int ev = parser.nextEvent();         if(ev == JSONParser.EOF) return;         if(ev == JSONParser.OBJECT_START) {           assertEvent(ev, JSONParser.OBJECT_START);           AddUpdateCommand cmd = new AddUpdateCommand(req);           cmd.commitWithin = commitWithin;           cmd.overwrite = overwrite;           cmd.solrDoc = parseDoc(ev);           processor.processAdd(cmd);         } else if(ev == JSONParser.ARRAY_START){           handleAdds();         } else{           throw  new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unexpected event :"+ev);         }       }     }*/
 comment|//
 comment|// "delete":"id"
 comment|// "delete":["id1","id2"]
