@@ -80,6 +80,15 @@ specifier|public
 class|class
 name|JsonRecordReader
 block|{
+DECL|field|DELIM
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DELIM
+init|=
+literal|"."
+decl_stmt|;
 DECL|field|rootNode
 specifier|private
 name|Node
@@ -607,6 +616,13 @@ DECL|field|recursiveWildCardChild
 name|Node
 name|recursiveWildCardChild
 decl_stmt|;
+DECL|field|useFqn
+specifier|private
+name|boolean
+name|useFqn
+init|=
+literal|false
+decl_stmt|;
 DECL|method|Node
 specifier|public
 name|Node
@@ -907,6 +923,31 @@ operator|=
 name|fieldName
 expr_stmt|;
 comment|// name to store collected text against
+if|if
+condition|(
+literal|"$FQN"
+operator|.
+name|equals
+argument_list|(
+name|n
+operator|.
+name|fieldName
+argument_list|)
+condition|)
+block|{
+name|n
+operator|.
+name|fieldName
+operator|=
+literal|null
+expr_stmt|;
+name|n
+operator|.
+name|useFqn
+operator|=
+literal|true
+expr_stmt|;
+block|}
 block|}
 block|}
 else|else
@@ -1207,6 +1248,8 @@ argument_list|,
 name|stack
 argument_list|,
 name|recordStarted
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
@@ -1263,6 +1306,8 @@ argument_list|,
 name|stack
 argument_list|,
 name|recordStarted
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
@@ -1312,6 +1357,9 @@ name|stack
 parameter_list|,
 name|boolean
 name|recordStarted
+parameter_list|,
+name|MethodFrameWrapper
+name|frameWrapper
 parameter_list|)
 throws|throws
 name|IOException
@@ -1380,6 +1428,12 @@ name|Wrapper
 parameter_list|(
 name|Node
 name|node
+parameter_list|,
+name|MethodFrameWrapper
+name|parent
+parameter_list|,
+name|String
+name|name
 parameter_list|)
 block|{
 name|this
@@ -1387,6 +1441,18 @@ operator|.
 name|node
 operator|=
 name|node
+expr_stmt|;
+name|this
+operator|.
+name|parent
+operator|=
+name|parent
+expr_stmt|;
+name|this
+operator|.
+name|name
+operator|=
+name|name
 expr_stmt|;
 block|}
 annotation|@
@@ -1423,6 +1489,8 @@ argument_list|,
 name|stack
 argument_list|,
 name|isRecordStarted
+argument_list|,
+name|this
 argument_list|)
 expr_stmt|;
 block|}
@@ -1476,6 +1544,8 @@ argument_list|,
 name|stack
 argument_list|,
 name|isRecordStarted
+argument_list|,
+name|this
 argument_list|)
 expr_stmt|;
 block|}
@@ -1607,7 +1677,14 @@ name|fieldName
 operator|==
 literal|null
 condition|?
+name|getNameInRecord
+argument_list|(
 name|name
+argument_list|,
+name|frameWrapper
+argument_list|,
+name|node
+argument_list|)
 else|:
 name|node
 operator|.
@@ -1643,6 +1720,10 @@ operator|new
 name|Wrapper
 argument_list|(
 name|node
+argument_list|,
+name|frameWrapper
+argument_list|,
+name|name
 argument_list|)
 expr_stmt|;
 block|}
@@ -1700,6 +1781,10 @@ operator|new
 name|Wrapper
 argument_list|(
 name|node
+argument_list|,
+name|frameWrapper
+argument_list|,
+name|name
 argument_list|)
 operator|.
 name|walk
@@ -1849,6 +1934,66 @@ block|}
 block|}
 block|}
 block|}
+block|}
+DECL|method|getNameInRecord
+specifier|private
+name|String
+name|getNameInRecord
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|MethodFrameWrapper
+name|frameWrapper
+parameter_list|,
+name|Node
+name|n
+parameter_list|)
+block|{
+if|if
+condition|(
+name|frameWrapper
+operator|==
+literal|null
+operator|||
+operator|!
+name|n
+operator|.
+name|useFqn
+condition|)
+return|return
+name|name
+return|;
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|frameWrapper
+operator|.
+name|prependName
+argument_list|(
+name|sb
+argument_list|)
+expr_stmt|;
+return|return
+name|sb
+operator|.
+name|append
+argument_list|(
+name|DELIM
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|name
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+return|;
 block|}
 DECL|method|isRecord
 specifier|private
@@ -2322,6 +2467,52 @@ DECL|field|node
 name|Node
 name|node
 decl_stmt|;
+DECL|field|parent
+name|MethodFrameWrapper
+name|parent
+decl_stmt|;
+DECL|field|name
+name|String
+name|name
+decl_stmt|;
+DECL|method|prependName
+name|void
+name|prependName
+parameter_list|(
+name|StringBuilder
+name|sb
+parameter_list|)
+block|{
+if|if
+condition|(
+name|parent
+operator|!=
+literal|null
+condition|)
+block|{
+name|parent
+operator|.
+name|prependName
+argument_list|(
+name|sb
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|DELIM
+argument_list|)
+expr_stmt|;
+block|}
+name|sb
+operator|.
+name|append
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|walk
 specifier|public
 specifier|abstract
